--- a/style.css
+++ b/style.css
@@ -67,3 +67,11 @@ border-right: 1px solid #dedede;
     margin: 5px 0; 
     
 }
+
+.money.plus{
+    color: #2ecc71;
+}
+
+.money.minus{
+    color: #c0392b;
+}
