--- a/style.css
+++ b/style.css
@@ -10,7 +10,9 @@
 }
 
 body {
-    background-color: #f7f7f7;
+    /* background-color: #f7f7f7; */
+    background-image: url("/image/money-tree.jpg");
+    background-position: 50% 50%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -78,6 +80,7 @@ border-right: 1px solid #dedede;
 
 label {
     display: inline-block;
+
     margin: 10px 0;
 
 }
