--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ input[type='text'], input[type='number'] {
 
 .btn {
     cursor: pointer;
-    background-color: #9c88ff;
+    background-color: #303bd6;
     box-shadow: var(--box-shadow);
     color: white;
     border: 0;
