--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@
 
 body {
     /* background-color: #f7f7f7; */
-    background-image: url("image/money-tree.jpg");
-    background-position: 50% 50%;
+    background-color: rgb(223, 205, 226);
+   
     display: flex;
     flex-direction: column;
     align-items: center;
